syntax = "proto3";

package example;

message Person {
  int32 id = 1;
  string name = 2;
  string email = 3;
  PhoneNumber phone = 4;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message AddressBook {
  repeated Person people = 1;
}
